manifests/mlflow/aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
      #nginx.ingress.kubernewtes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow.20.4.90.180.nip.io  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow
            port:
              number: 5000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
      - mflow.20.4.90.180.nip.io
      secretName: mlflow-cert # < cert-manager w-ll store the created certificate in this secret.
